--- a/pom.xml
+++ b/pom.xml
@@ -133,7 +133,7 @@
           <processTypes>
             <!-- Tell Heroku how to launch your application -->
             <!-- You might have to remove the ./ in front   -->
-            <web>java -jar ./target/sparkjava-demo-1.0-jar-with-dependencies.jar</web>
+            <web>java -jar ./target/ucsb-cs56-musicplayer-jar-with-dependencies.jar</web>
           </processTypes>
 	</configuration>
       </plugin>
